# smartfeed

./: .gitignore  CHANGELOG.md  CLAUDE.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/app/api/: dependencies.py  main.py
backend/src/app/api/routes/: articles.py  feeds.py  search.py
backend/src/app/cli/: commands.py
backend/src/app/core/: config.py  interfaces.py  models.py
backend/src/app/ingestion/: fetcher.py  scheduler.py
backend/src/app/processing/: classifier.py  embeddings.py  summarizer.py
backend/src/app/storage/: database.py  postgres_repo.py  vector_store.py
frontend/: Dockerfile  Dockerfile.dev  biome.json  package.json  pnpm-lock.yaml
frontend/messages/: de.json  en.json  es.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/[locale]/articles/: page.tsx
frontend/src/app/[locale]/feeds/: page.tsx
frontend/src/app/[locale]/search/: page.tsx
frontend/src/app/articles/: page.tsx
frontend/src/app/feeds/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/articles/: ArticleCard.tsx
frontend/src/components/layout/: LanguageSwitcher.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx  spinner.tsx
frontend/src/hooks/: useAddFeed.ts  useArticles.ts  useFeedActions.ts  useSearch.ts
frontend/src/i18n/: routing.ts
frontend/src/types/: index.ts
