[project]
name = "smartfeed-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "httpx==0.28.1",
    "feedparser==6.0.12",
    "pydantic==2.12.5",
    "pydantic-settings==2.14.0",
    "sqlalchemy==2.0.49",
    "psycopg2-binary==2.9.12",
    "pgvector==0.4.2",
    "litellm==1.83.14",
    "apscheduler==3.11.2",
    "typer==0.23.1",
    "numpy==2.4.4",
]

[project.scripts]
smartfeed = "app.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "ruff==0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
